--- a/Index.html
+++ b/Index.html
@@ -3,19 +3,23 @@
 
 <head>
     <title>Ash's Random Quote Gen</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <script type="text/javascript" src "bower_components/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <link rel="stylesheet" type="text/css" href="Style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <link type="text/javascript" src "bower_components/jquery/dist/jquery.js">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js">
+    <script src="Script.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 
 <body>
     <div class="container-fluid">
         <h1>Ash's Random Quote Generator</h1>
-        <div class="QuoteButton
-">
+        <div class="QuoteButton">
             <button type="button" class="btn btn-default btn-lg center-block">Generate Quote</button>
+        </div>
+        <div class="QuoteText">
+            <h2 class="Quote">place holder for quote text</h2>
         </div>
     </div>
 </body>
