js not working, debugging

--- a/Index.html
+++ b/Index.html
@@ -3,13 +3,12 @@
 
 <head>
     <title>Ash's Random Quote Gen</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="Script.js"></script>
+    <link rel="stylesheet" type="text/css" href="Style.css">
     <link type="text/javascript" src "bower_components/jquery/dist/jquery.js">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js">
-    <script src="Script.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 
 <body>
