--- a/Index.html
+++ b/Index.html
@@ -5,21 +5,22 @@
     <title>Ash's Random Quote Gen</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="Script.js"></script>
-    <link rel="stylesheet" type="text/css" href="Style.css">
     <link type="text/javascript" src "bower_components/jquery/dist/jquery.js">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js">
+    <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 
 <body>
     <div class="container-fluid">
         <h1>Ash's Random Quote Generator</h1>
         <div class="QuoteButton">
-            <button type="button" class="btn btn-default btn-lg center-block">Generate Quote</button>
+            <button id="but" type="button" class="btn btn-default btn-lg center-block">Generate Quote</button>
         </div>
         <div class="QuoteText">
-            <h2 class="Quote">place holder for quote text</h2>
+            <h2 Id="Quote"></h2>
         </div>
+        <a id="twitter" class="twitter-share-button" href="https://twitter.com/intent/tweet"></a>
     </div>
 </body>
 
