button added, fixing logic to ember url with tweet text

--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,9 @@
         <div class="QuoteText">
             <h2 Id="Quote"></h2>
         </div>
-        <a id="twitter" class="twitter-share-button" href="https://twitter.com/intent/tweet"></a>
+        <a class="twitter-share-button" href="https://twitter.com/intent/tweet" data-size="large" target="_blank">
+            <button type="button" class="btn twitterButton btn-primary">Tweet it!</button>
+        </a>
     </div>
 </body>
 
